--- a/index.html
+++ b/index.html
@@ -1,10 +1,23 @@
-<<!DOCTYPE html>
-<html>
+<!DOCTYPE html>
+<html ng-app="myApp">
 <head>
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.min.js"></script>
+	<script type="text/javascript" src="js/main.js"></script>
+	<script type="text/javascript" src="js/controllers.js"></script>
+	<script type="text/javascript" src="bower_components/angular-audio/app/angular.audio.js"></script>
+	<script type="text/javascript" src="bower_components/angular-audio/app/scripts/main.js"></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 	<title>Audio Podcast Application</title>
 </head>
 <body>
-<p>Doing something different</p>
+	<div ng-controller="audioCtrl">
+	<button ng-click='audio.paused ? audio.play() : audio.pause()'>Pause</button>
+	<button ng-click='audio.restart()'>Stop</button>
+	<button ng-click='audio.muting = !audio.muting'>Mute</button>
+	<label>Current Time</label>
+	<input class='form-control' type=text ng-model='audio.currentTime'>
+	<label>Volume</label>
+	<input class='form-control' type=range min=0 max=1 step=0.01 ng-model='audio.volume'>
+	 </div>
 </body>
 </html>
