--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="myApp">
 <head>
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.min.js"></script>
+	<script src="js/angular.min.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 	<script type="text/javascript" src="js/controllers.js"></script>
 	<script type="text/javascript" src="bower_components/angular-audio/app/angular.audio.js"></script>
@@ -11,12 +11,14 @@
 <body>
 	<div ng-controller="audioCtrl">
 	<button ng-click='audio.paused ? audio.play() : audio.pause()'>Pause</button>
-	<button ng-click='audio.restart()'>Stop</button>
+	<button ng-click='audio.restart(); hello()'>Stop</button>
 	<button ng-click='audio.muting = !audio.muting'>Mute</button>
 	<label>Current Time</label>
 	<input class='form-control' type=text ng-model='audio.currentTime'>
 	<label>Volume</label>
 	<input class='form-control' type=range min=0 max=1 step=0.01 ng-model='audio.volume'>
+	 
+	 <button ng-click="hello()">YO</button>
 	 </div>
 </body>
 </html>
