--- a/index.html
+++ b/index.html
@@ -9,16 +9,32 @@
 	<title>Audio Podcast Application</title>
 </head>
 <body>
-	<div ng-controller="audioCtrl">
-	<button ng-click='audio.paused ? audio.play() : audio.pause()'>Pause</button>
-	<button ng-click='audio.restart(); hello()'>Stop</button>
-	<button ng-click='audio.muting = !audio.muting'>Mute</button>
-	<label>Current Time</label>
-	<input class='form-control' type=text ng-model='audio.currentTime'>
-	<label>Volume</label>
-	<input class='form-control' type=range min=0 max=1 step=0.01 ng-model='audio.volume'>
-	 
-	 <button ng-click="hello()">YO</button>
-	 </div>
+	<div class="container-fluid">
+		<div class="row">
+		  <div class="col-md-12 text-center text-uppercase">
+		    <h1>Podcast Analytics</h1>
+		    <h3>Etilio</h3>
+		  </div>
+		</div>
+		<div class="row">
+		  <div class="col-md-12">
+		    <hr>
+		  </div>
+		</div>
+		<div class="row">
+			<div class="col-md-6 col-md-offset-3">				
+				<div ng-controller="audioCtrl">
+				<button ng-click='audio.paused ? audio.play() : audio.pause()'>Pause</button>
+				<button ng-click='audio.restart(); hello()'>Stop</button>
+				<button ng-click='audio.muting = !audio.muting'>Mute</button>
+				<label>Current Time</label>
+				<input class='form-control' type=text ng-model='audio.currentTime'>
+				<label>Volume</label>
+				<input class='form-control' type=range min=0 max=1 step=0.01 ng-model='audio.volume'>		 
+				 <button ng-click="hello()">save current time to variable curTime</button>
+				 </div>
+			</div>
+		</div>		
+	</div>
 </body>
 </html>
